# DigitalHuman

./: .dockerignore  .env.example  .env.local.example  .gitignore  docker-compose.yml
Backend/: Dockerfile  alembic.ini  pyproject.toml  worker.Dockerfile
Backend/app/: __init__.py  main.py
Backend/app/adapters/: __init__.py  cover.py  cozyvoice.py  distributor.py  ffmpeg.py  heygem.py  llm.py  playwright_publisher.py  tuilionnx.py  url_download.py  whisper.py
Backend/app/api/: deps.py  router.py
Backend/app/api/routers/: __init__.py  artifacts.py  covers.py  distributions.py  music.py  pipelines.py  profiles.py  risk_checks.py  segments.py  system.py  tasks.py
Backend/app/core/: __init__.py  config.py  exceptions.py  logging.py
Backend/app/db/: base.py  init_db.py  models.py  session.py
Backend/app/db/migrations/: env.py
Backend/app/db/migrations/versions/: 20260601_0001_initial_schema.py  20260601_0002_music_distribution.py  20260618_0003_krlongai_alignment.py  20260621_0004_voice_prompt_text.py  20260621_0005_generation_quality.py
Backend/app/domain/: __init__.py  enums.py  status.py
Backend/app/schemas/: domain.py
Backend/app/services/: __init__.py  cover_service.py  distribution_service.py  id_service.py  music_service.py  pipeline_service.py  profile_service.py  rewrite_service.py  risk_service.py  script_parser.py  segment_service.py  serializers.py  storage_service.py  task_enqueue.py  task_guards.py  task_service.py
Backend/app/workers/: __init__.py  celery_app.py  tasks.py
Backend/tests/: test_api_auth.py  test_task_guards.py
Frontend/: .env.development  Dockerfile  package-lock.json  package.json  vite.config.ts
Frontend/src/: App.tsx  index.css  main.tsx
Services/cosyvoice-service/: Dockerfile  pyproject.toml
Services/heygem-service/: Dockerfile  pyproject.toml
Services/heygem-service/app/: main.py
Services/tuilionnx-service/: Dockerfile  pyproject.toml
Services/tuilionnx-service/app/: main.py  onnx_inference.py
Services/whisper-service/: Dockerfile  pyproject.toml
Services/whisper-service/app/: main.py
apps/web/: package-lock.json  package.json
docs/: api-interface-design.md  codebase-current-state.md  database-technical-design.md  digital-human-video-generator-prd.md  technical-architecture.md  todo_list.json  ui-design.md
scripts/: setup-sau-cli.sh
scripts/windows/: README.md  combined_launcher.py  requirements-desktop.txt  restart_all_dev.py  restart_api.py  setup_cosyvoice.py  (+12 more)
(+53 files in other folders)
