[project]
name = "digital-human-backend"
version = "0.1.0"
description = "FastAPI backend for the Digital Human Studio workflow"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.0",
  "celery>=5.5.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pillow>=11.0.0",
  "playwright>=1.49.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "pymysql>=1.1.1",
  "python-multipart>=0.0.20",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"
