[project]
name = "digital-human-heygem-service"
version = "0.1.0"
description = "HTTP bridge for HeyGem used by DigitalHuman"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "uvicorn[standard]>=0.34.0"
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"
