[project]
name = "digital-human-tuilionnx-service"
version = "0.1.0"
description = "HTTP bridge for TuiliONNX used by DigitalHuman"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "uvicorn[standard]>=0.34.0",
  "onnxruntime-gpu>=1.18.0",
  "opencv-python>=4.8.0",
  "numpy>=1.26.0",
  "soundfile>=0.12.1",
  "librosa>=0.10.2",
  "kaldi-native-fbank>=1.20.0",
  "scipy>=1.11.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
