[project]
name = "digital-human-whisper-service"
version = "0.1.0"
description = "HTTP wrapper for OpenAI Whisper used by DigitalHuman"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "openai-whisper>=20240930",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "uvicorn[standard]>=0.34.0"
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"
